--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,15 @@ body {
   border-color: red; 
   border-width: 3.7795275591px 0px; 
 }
+
+.column {
+  float: left; 
+  width: 50%;
+  padding: 20px; 
+}
+
+.row:after {
+  content:""; 
+  display: table; 
+  clear: both;
+}
