--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,24 @@ img {
 
 h1 {
   background-image: url('/img/logo.png');
-  /* filter: drop-shadow(4px 4px 3px black); */
+  filter: drop-shadow(4px 4px 3px black); 
+  
 }
 
 body {
+  margin: 0; 
   background-color: white; 
-  background-image: linear-gradient(#ccc, white, #ccc); 
+
+  /* fallback for older browsers */ 
+  background-image: url('/img/top-image.png') no-repeat top center / contain;
+
+  background-image: 
+  url('/img/top-image.png'), 
+  url('/img/bottom-image.png'), 
+  linear-gradient(#ccc, white, #ccc); 
+  background-repeat: no-repeat, no-repeat, no-repeat; 
+  background-position: top center, bottom center, center; 
+  background-size: contain, contain, cover; 
   border-style: solid; 
   border-color: red; 
   border-width: 3.7795275591px 0px; 
@@ -67,4 +79,15 @@ body {
   content:""; 
   display: table; 
   clear: both;
+}
+
+article { 
+  padding-top: 200px; 
+  padding-bottom: 200px; 
+  font-size: 90%;
+  padding-right: 60px; 
+}
+
+address {
+  padding: 50px; 
 }
